reflectapi-demo/tests/errors/invalid_reflect_type_lifetime_generic2.stderr
error: reflectapi::Input/reflectapi::Output does not support generic lifetime parameters
 --> tests/errors/invalid_reflect_type_lifetime_generic2.rs:2:17
  |
2 | struct MyStruct<'a> {
  |                 ^^

error: reflectapi::Input/reflectapi::Output does not support generic lifetime parameters
 --> tests/errors/invalid_reflect_type_lifetime_generic2.rs:8:48
  |
8 | enum TestEnumWithGenericsAndFieldsAndLifetimes<'a, T: Clone>
  |                                                ^^
